findbyuserid fixed
